--- a/_config.yml
+++ b/_config.yml
@@ -13,6 +13,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: admturner
 github_repository_url: https://github.com/admturner/empty-style-guide
 markdown: kramdown
+version: 0.1.0
 
 # Exclude from processing.
 exclude:
