--- a/_data/colors.yml
+++ b/_data/colors.yml
@@ -2,31 +2,30 @@
 #
 # If you use CSS variables (especially via Sass or LESS), I recommend naming
 # each color to match your variable names.
-sitecolors:
-    - group: primary
-      colors:
-          - name: pink
-            hex: db208d
-            rgb: 219, 32, 141
-          - name: teal
-            hex: 0e848f
-            rgb: 14, 132, 143
-    - group: secondary
-      colors:
-          - name: mauve
-            hex: 8f0656
-            rgb: 143, 6, 86
-          - name: yellow
-            hex: ffe327
-            rgb: 255, 227, 39
-          - name: grayblack
-            hex: 1a1b22
-            rgb: 26, 27, 34
-    - group: support
-      colors:
-          - name: black
-            hex: 1a1a1a;
-            rgb: 26, 26, 26
-          - name: white
-            hex: f0f0f0
-            rgb: 240, 240, 240
+- title: Primary Colors
+  colors:
+      - name: pink
+        hex: db208d
+        rgb: 219, 32, 141
+      - name: teal
+        hex: 0e848f
+        rgb: 14, 132, 143
+- title: Secondary Colors
+  colors:
+      - name: mauve
+        hex: 8f0656
+        rgb: 143, 6, 86
+      - name: yellow
+        hex: ffe327
+        rgb: 255, 227, 39
+      - name: grayblack
+        hex: 1a1b22
+        rgb: 26, 27, 34
+- title: Support Colors
+  colors:
+      - name: black
+        hex: 1a1a1a;
+        rgb: 26, 26, 26
+      - name: white
+        hex: f0f0f0
+        rgb: 240, 240, 240
