Switch to IBM Plex for base UI font

--- a/_data/stylesheets.yml
+++ b/_data/stylesheets.yml
@@ -14,8 +14,8 @@ styles:
     sheets:
       - name: Main UI CSS
         url: /assets/css/main.css
-        type: text/css
-        media: all
+      - name: IBM Plex Sans
+        url: https://fonts.googleapis.com/css?family=IBM+Plex+Mono:400,400i,600,600i|IBM+Plex+Sans:400,400i,700,700i
   - group: pattern-library
     sheets:
       - name: Empty WordPress Theme CSS
