--- a/_data/stylesheets.yml
+++ b/_data/stylesheets.yml
@@ -23,6 +23,6 @@ styles:
         type: text/css
         media: all
       - name: Open Sans CSS
-        url: //fonts.googleapis.com/css?family=Open+Sans%3A300%2C300italic%2C600%2C600italic%2C400%2C400italic%2C700&amp;subset=latin%2Clatin-ext
+        url: https://fonts.googleapis.com/css?family=Open+Sans:400,400i,600,600i,700,700i
         type: text/css
         media: all
