--- a/_data/colors.yml
+++ b/_data/colors.yml
@@ -2,30 +2,50 @@
 #
 # If you use CSS variables (especially via Sass or LESS), I recommend naming
 # each color to match your variable names.
-- title: Primary Colors
+- title: Brand Colors
   colors:
-      - name: pink
-        hex: db208d
-        rgb: 219, 32, 141
-      - name: teal
-        hex: 0e848f
-        rgb: 14, 132, 143
+      - name: Brand Crimson
+        hex: 981e32
+        rgb: 152, 30, 50
+      - name: Brand Gray
+        hex: 5e6a71
+        rgb: 94, 106, 113
 - title: Secondary Colors
   colors:
-      - name: mauve
-        hex: 8f0656
-        rgb: 143, 6, 86
-      - name: yellow
-        hex: ffe327
-        rgb: 255, 227, 39
-      - name: grayblack
-        hex: 1a1b22
-        rgb: 26, 27, 34
-- title: Support Colors
+      - name: Green
+        hex: 8f7e35
+        rgb: 143, 126, 53
+      - name: Orange
+        hex: b67233
+        rgb: 182, 114, 51
+      - name: Blue
+        hex: 4f868e
+        rgb: 79, 134, 142
+      - name: Yellow
+        hex: c69214
+        rgb: 198, 146, 20
+- title: Accent Colors
   colors:
-      - name: black
-        hex: 1a1a1a;
-        rgb: 26, 26, 26
-      - name: white
-        hex: f0f0f0
-        rgb: 240, 240, 240
+      - name: Accent Crimson
+        hex: c60c30
+        rgb: 198, 12, 48
+      - name: Accent Green
+        hex: ada400
+        rgb: 173, 164, 0
+      - name: Accent Orange
+        hex: f6861f
+        rgb: 211, 130, 53
+      - name: Accent Blue
+        hex: 00a5bd
+        rgb: 0, 165, 189
+      - name: Accent Yellow
+        hex: ffb81c
+        rgb: 198 146 20
+- title: Neutral Colors
+  colors:
+      - name: Neutral Dark
+        hex: 2a3033
+        rgb: 42, 48, 51
+      - name: Neutral Light
+        hex: eff0f1
+        rgb: 239, 240, 241
